fix overflow

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,7 @@
 html,
 body {
   height: 100%;
+  color: #333;
 }
 
 body {
@@ -14,12 +15,16 @@ body {
 
 .map,
 .col-aside {
-  height: calc(100vh - 50px);
   padding: 0;
+}
+
+.map {
+  height: calc(100vh - 50px);
 }
 
 .search-in,
 .search-btn {
+  height: 41px;
   border-radius: 0;
 }
 
@@ -28,7 +33,6 @@ body {
 }
 
 .marker-list {
-  height: calc(100vh - 84px);
   margin-bottom: 0;
 }
 
@@ -42,10 +46,20 @@ body {
 }
 
 .info {
-  height: calc(100vh - 50px);
   border-radius: 0;
   border-top: 0;
   margin-bottom: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .col-aside,
+  .info {
+    height: calc(100vh - 50px);
+  }
+
+  .marker-list {
+    height: calc(100vh - 91px);
+  }
 }
 
 .info-heading {
@@ -69,6 +83,12 @@ body {
   margin-top: 0.5em;
 }
 
+.api-title-span {
+  font-size: 0.7em;
+  font-weight: lighter;
+  color: #4b4b4b;
+}
+
 .address {
   background-color: #f5f5f5;
 }
@@ -83,7 +103,9 @@ body {
 }
 
 .list-places-item:hover {
-  color: #00f;
+  color: #43434b;
+  background-color: #dfdff6;
+  font-weight: bold;
 }
 
 .photo {
